--- a/app/src/main/res/layout/activity_opcije.xml
+++ b/app/src/main/res/layout/activity_opcije.xml
@@ -36,11 +36,11 @@
         app:layout_constraintTop_toBottomOf="@+id/btnTreninziOpcije" />
 
     <Button
-        android:id="@+id/btnNasTimOpcije"
+        android:id="@+id/btnKalkulatorKalorija"
         android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Nesto1"
+        android:text="BMR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnOKlubuOpcije" />
@@ -53,7 +53,7 @@
         android:text="BMI "
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnNasTimOpcije" />
+        app:layout_constraintTop_toBottomOf="@+id/btnKalkulatorKalorija" />
 
     <Button
         android:id="@+id/btnCenovnik"
