--- a/app/src/main/res/layout/activity_treninzi.xml
+++ b/app/src/main/res/layout/activity_treninzi.xml
@@ -7,10 +7,11 @@
     tools:context=".TreninziActivity">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="107dp"
-        tools:layout_editor_absoluteY="134dp"
         android:id="@+id/listaTreninga"
-        android:layout_margin="15dp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_margin="15dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="134dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
