--- a/app/src/main/res/layout/activity_kalkulator_kalorija.xml
+++ b/app/src/main/res/layout/activity_kalkulator_kalorija.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:id="@+id/logoKalkulatorKalorija"
         android:layout_width="wrap_content"
-        android:layout_height="150dp"
+        android:layout_height="130dp"
         android:layout_marginTop="24dp"
         android:src="@mipmap/athletics_gym"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,40 +56,6 @@
         app:layout_constraintStart_toStartOf="@+id/guideline4"
         app:layout_constraintTop_toTopOf="@+id/radioGroupKalkulatorKalorija" />
 
-    <EditText
-        android:id="@+id/godineKalkulatorKalorija"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/logoKalkulatorKalorija" />
-
-    <EditText
-        android:id="@+id/visinaKalkulatorKalorija"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/godineKalkulatorKalorija" />
-
-    <EditText
-        android:id="@+id/tezinaKalkulatorKalorija"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:ems="10"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
-        app:layout_constraintTop_toBottomOf="@+id/visinaKalkulatorKalorija" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline4"
         android:layout_width="wrap_content"
@@ -105,7 +71,7 @@
         android:checkedButton="@id/radioBtnMuskiKalkulatorKalorija"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tezinaKalkulatorKalorija">
 
         <RadioButton
@@ -122,7 +88,7 @@
     </RadioGroup>
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/rezultatKalkulatorKalorija"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
@@ -138,10 +104,83 @@
         android:id="@+id/btnIzracunajKalkulatorKalorija"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="16dp"
         android:text="Izračunaj"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radioGroupKalkulatorKalorija" />
+
+    <EditText
+        android:id="@+id/godineKalkulatorKalorija"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/logoKalkulatorKalorija" />
+
+    <EditText
+        android:id="@+id/visinaKalkulatorKalorija"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView4"
+        app:layout_constraintTop_toBottomOf="@+id/godineKalkulatorKalorija" />
+
+    <EditText
+        android:id="@+id/tezinaKalkulatorKalorija"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:ems="10"
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textView5"
+        app:layout_constraintTop_toBottomOf="@+id/visinaKalkulatorKalorija" />
+
+    <TextView
+        android:id="@+id/warningGodineKalkulatorKalorija"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="6dp"
+        android:text="Molimo Vas unesite godine."
+        android:textColor="#F60808"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/logoKalkulatorKalorija" />
+
+    <TextView
+        android:id="@+id/warningVisinaKalkulatorKalorija"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:text="Molimo Vas unesite visinu."
+        android:textColor="#F60808"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/godineKalkulatorKalorija" />
+
+    <TextView
+        android:id="@+id/warningTezinaKalkulatorKalorija"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="2dp"
+        android:text="Molimo Vas unesite težinu."
+        android:textColor="#F60808"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="@+id/guideline4"
+        app:layout_constraintTop_toBottomOf="@+id/visinaKalkulatorKalorija" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
